fixed button gap

--- a/style.css
+++ b/style.css
@@ -478,7 +478,6 @@ footer h5 {
   .contact-social-icons {
     justify-content: center;
     align-self: center;
-    gap: 5vw;
   }
 
   .social-icon {
